fix problem gui